--- a/style1.css
+++ b/style1.css
@@ -101,7 +101,7 @@ header nav ul li a:hover {
 .banner {
   min-height: 100vh;
   width: 100%;
-  background-image: url("images/banner.jpg");
+  background-image: url("banner.jpg");
   background-size: cover;
   background-attachment: fixed;
 }
